--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+    <link rel="stylesheet" href="/style.css" />
+  </head>
+  <body>
+    <div class="contiener">
+      <!-- <button onclick="alert('start bosildi')">Start</button>
+    <button id="btn">Evetn</button>
+    <!-- <button id="listener">Listener</button> -->
+      <!-- <script src="main.js"></script> -->
+<div >
     
-</body>
+    <h1 id="first"></h1>
+</div>
+<div>
+
+    <h1 id="second"></h1>
+</div>
+    
+<div>
+
+    <h1 id="third"></h1>
+</div>
+
+    </div>
+    <script src="main.js"></script>
+  </body>
 </html>
