--- a/index.html
+++ b/index.html
@@ -12,21 +12,34 @@
     <button id="btn">Evetn</button>
     <!-- <button id="listener">Listener</button> -->
       <!-- <script src="main.js"></script> -->
-<div >
+<!-- <div id="ota" >
     
-    <h1 id="first"></h1>
+    <h1 id="first">aa</h1>
 </div>
 <div>
 
-    <h1 id="second"></h1>
+    <h1 id="second">bb</h1>
 </div>
     
 <div>
 
-    <h1 id="third"></h1>
+    <h1 id="third">cc</h1>
 </div>
 
     </div>
+
+
+<button class="button">Click</button> -->
+
+<ul>
+  <li>Barcelona</li>
+  <li>Barca</li>
+  <li>Bunyodkor</li>
+  <li>Paxtakor</li>
+  <button>click</button>
+</ul>
+
+
     <script src="main.js"></script>
   </body>
 </html>
