--- a/index.html
+++ b/index.html
@@ -31,15 +31,22 @@
 
 <button class="button">Click</button> -->
 
-<ul>
+<!-- <ul>
   <li>Barcelona</li>
   <li>Barca</li>
   <li>Bunyodkor</li>
   <li>Paxtakor</li>
   <button>click</button>
-</ul>
+</ul> -->
+  
+<div class="parent">
 
-
-    <script src="main.js"></script>
-  </body>
+  <form id="form">
+    <input type="text" id="input"  placeholder="user.name">
+    <button type="submit">click</button>
+  </form>
+  <div id="messege" class="xat"></div>
+  <script src="main.js"></script>
+</div>
+</body>
 </html>
